pkl-core/src/test/files/LanguageSnippetTests/input/errors/functionNotFoundMaybeProperty.pkl
prop = 42
call = prop()
